<resources>
    <string name="AdvancedPregnancy">Advanced Pregnancy</string>
    <string name="Aesthetic">Aesthetic -7G 30mm</string>
    <string name="Anaesthesia">Anaesthesia -7G 90mm</string>
    <string name="Area_of_interest">Area of interest:</string>
    <string name="Birth">Birth：</string>
    <string name="Bovine">Bovine</string>
    <string name="Cancel">Cancel</string>
    <string name="Canine">Canine</string>
    <string name="Canine_Mid_Large">Canine Mid-Large</string>
    <string name="Canine_Small">Canine Small</string>
    <string name="Channel">Channel</string>
    <string name="Close">Close</string>
    <string name="Equine">Equine</string>
    <string name="Feline">Feline</string>
    <string name="Female">F</string>
    <string name="Injection">Injection -7G 30mm</string>
    <string name="Male">M</string>
    <string name="Needle_Knife1">Needle Knife -3.5G 25mm</string>
    <string name="Needle_Knife2">Needle Knife -3.5G 40mm</string>
    <string name="Needle_Knife3">Needle Knife -3.5G 50mm</string>
    <string name="Nerve_Biopsy">Nerve Biopsy -22G 50mm</string>
    <string name="New_Patient">New Patient</string>
    <string name="OK">OK</string>
    <string name="Others">Others</string>
    <string name="Ovary">Ovary</string>
    <string name="Ovine">Ovine</string>
    <string name="Patient">Patient</string>
    <string name="Pregnancy">Pregnancy</string>
    <string name="Select">Select</string>
    <string name="Setting">Setting</string>
    <string name="Turtle">Turtle</string>
    <string name="Users1">User1</string>
    <string name="Users2">User2</string>
    <string name="Uterus">Uterus</string>
    <string name="Vein_Detained">Vein Detained -12G 63mm</string>
    <string name="VesselFlow">VesselFlow</string>
    <string name="WiFi_Channel">Wireless Channel</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abdomen">Abdomen</string>
    <string name="admin">Admin</string>
    <string name="advanced_settings">Advanced Setting</string>
    <string name="ae_tatle">AE title：</string>
    <string name="aesthetics">Aesthetics</string>
    <string name="again_exit">Press again to exit</string>
    <string name="age">Age：</string>
    <string name="angle">Angle:</string>
    <string name="angle_button">ANGLE</string>
    <string name="angle_e_button">ANGLE.E</string>
    <string name="animal_mode">Vet Software：</string>
    <string name="annotate">Annotate</string>
    <string name="app_name">mVUE</string>
    <string name="app_name_mic">microVUE</string>
    <string name="back">Back</string>
    <string name="base_line">BaseLine</string>
    <string name="base_line_button">BaseLine</string>
    <string name="battery_tips">Please go to “Settings”-“Battery” and turn on “Performance Mode”</string>
    <string name="biopsy_enhance">Enhance</string>
    <string name="breast">Breast</string>
    <string name="browse_data">Browse data</string>
    <string name="btn_annotate">Annotate</string>
    <string name="btn_biopsy">Biopsy</string>
    <string name="btn_compound">Compound</string>
    <string name="btn_dr">DR</string>
    <string name="btn_enhance">SRI</string>
    <string name="btn_focus">FocusPos</string>
    <string name="btn_gain_add">Gain +</string>
    <string name="btn_gain_color_add">Color Gain +</string>
    <string name="btn_gain_color_minus">Color Gain -</string>
    <string name="btn_gain_minus">Gain -</string>
    <string name="btn_gain_pw_add">PW Gain +</string>
    <string name="btn_gain_pw_minus">PW Gain -</string>
    <string name="btn_harmonic">Freq</string>
    <string name="btn_measure">Measure</string>
    <string name="btn_play">Play</string>
    <string name="btn_save_image">Save Image</string>
    <string name="btn_save_video">Save Video</string>
    <string name="btn_show_db">View Data</string>
    <string name="btn_tgc">TGC</string>
    <string name="btn_zoom">Zoom</string>
    <string name="calibration_magnetic">Magnetic Calibration</string>
    <string name="cancel">Cancel</string>
    <string name="cardiac">Cardiac</string>
    <string name="carotid">Carotid</string>
    <string name="channel_using">The Channel is Currently Using.</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear</string>
    <string name="clear_table">Clear</string>
    <string name="color">Color:</string>
    <string name="color_gain">Color Gain</string>
    <string name="compound">Compound:</string>
    <string name="convex">convex</string>
    <string name="dcm_setting">Dicom Set</string>
    <string name="dcm_upload_delete">Delete files when successfully uploaded</string>
    <string name="defeated_complete">Save Defeated!</string>
    <string name="delete">Delete</string>
    <string name="doctor">Doctor：</string>
    <string name="dr">DR:</string>
    <string name="edd_lmp">EDD(LMP)：</string>
    <string name="enh">ENH:</string>
    <string name="enh_needle">Needle Enh</string>
    <string name="examination">Exam</string>
    <string name="export">Export</string>
    <string name="export_all">Export all</string>
    <string name="eye">Eye</string>
    <string name="f">F:</string>
    <string name="factory_data_reset">Load factory</string>
    <string name="failure">Failure</string>
    <string name="finish_measure">should finish the last measure</string>
    <string name="flow_mode">Flow Mode</string>
    <string name="freeze">FREEZE</string>
    <string name="freeze_save_image">Freeze Auto Save Image：</string>
    <string name="freeze_save_video">Freeze Auto Save Video：</string>
    <string name="fs">FS</string>
    <string name="gain">Gain:</string>
    <string name="go_open">Go open</string>
    <string name="gps_tips">Location service is not turned on, is it turned on?</string>
    <string name="gynecology">Gynecology</string>
    <string name="harmonic_10">H10.0M</string>
    <string name="harmonic_7">7.5M</string>
    <string name="heart_beat">Heart Beat:</string>
    <string name="human_ac">GA(AC)</string>
    <string name="human_ac1">AC</string>
    <string name="human_ac_efw">EFW（AC）</string>
    <string name="human_angle">Angle</string>
    <string name="human_area">Area(Circ)</string>
    <string name="human_area1">Area</string>
    <string name="human_bd">BD</string>
    <string name="human_bd_btn">GA(BD)</string>
    <string name="human_bm_heart5">Heart Rate(5)</string>
    <string name="human_bm_height">Depth</string>
    <string name="human_bm_time">Time</string>
    <string name="human_bpd">GA(BPD)</string>
    <string name="human_bpd1">BPD</string>
    <string name="human_bpd_efw">EFW(BPD)</string>
    <string name="human_circumference">Circum</string>
    <string name="human_crl">GA(CRL)</string>
    <string name="human_crl1">CRL</string>
    <string name="human_depth">Depth</string>
    <string name="human_edd">EDD</string>
    <string name="human_efw">EFW</string>
    <string name="human_fl">GA(FL)</string>
    <string name="human_fl1">FL</string>
    <string name="human_fl_efw">EFW(FL)</string>
    <string name="human_ga">GA</string>
    <string name="human_gs">GA(GS)</string>
    <string name="human_gs1">GS</string>
    <string name="human_gsd">GSD</string>
    <string name="human_gsd_btn">GA(GSD)</string>
    <string name="human_gsd_h">GSD-H</string>
    <string name="human_gsd_h_btn">GA(GSD-H)</string>
    <string name="human_gsd_v">GSD-V</string>
    <string name="human_gsd_v_btn">GA(GSD-V)</string>
    <string name="human_hc">GA(HC)</string>
    <string name="human_hc1">HC</string>
    <string name="human_hc_efw">EFW（HC）</string>
    <string name="human_hd">HD</string>
    <string name="human_hd_btn">GA(HD)</string>
    <string name="human_length">Distance</string>
    <string name="human_lvid">LVID</string>
    <string name="human_pw_diam">Diam</string>
    <string name="human_pw_fl">FL</string>
    <string name="human_pw_heart">Heart Rate</string>
    <string name="human_pw_heart2">Heart Rate(2)</string>
    <string name="human_pw_pi">PI</string>
    <string name="human_pw_ri">RI</string>
    <string name="human_pw_sd">S/D</string>
    <string name="human_pw_sd_ed">ED</string>
    <string name="human_pw_sd_ps">PS</string>
    <string name="human_pw_speed">Speed</string>
    <string name="human_pw_tamax">TAMAX</string>
    <string name="human_pw_tamean">TAMEAN</string>
    <string name="human_pw_velocity">Velocity</string>
    <string name="human_second">s</string>
    <string name="human_td">TD</string>
    <string name="human_td_btn">GA(TD)</string>
    <string name="human_trace">Trace</string>
    <string name="id">ID：</string>
    <string name="image_save_permission">Allow Your Permission to Save Image</string>
    <string name="in_plane">In-Plane</string>
    <string name="information">Show information:</string>
    <string name="ip">IP：</string>
    <string name="ip_null">IP is null</string>
    <string name="kidney">Kidney</string>
    <string name="language">Language</string>
    <string name="left">Left</string>
    <string name="linear">linear</string>
    <string name="live">LIVE</string>
    <string name="lmp">LMP：</string>
    <string name="lung">Lung</string>
    <string name="ma_lmp">MA(LMP)：</string>
    <string name="mc">MC</string>
    <string name="measure_magnifier">Measure Magnify：</string>
    <string name="measure_max">up to most measure!</string>
    <string name="not_open">Not open</string>
    <string name="please_enter_password">Input SN</string>
    <string name="prf_button">Scale(PRF)</string>
    <string name="pw_gain">PW Gain</string>
    <string name="report">Report</string>
    <string name="reset_factory_tips">Are you sure to restore the factory settings ?</string>
    <string name="steer_button">STEER</string>
    <string name="sure">Sure</string>
    <string name="sure_delete">Are you sure to delete？</string>
    <string name="table">Data sheet</string>
    <string name="tips">Tips</string>
    <string name="vocational_tips">Under the guidance only</string>
    <string name="volume_button">SV</string>
    <string name="wifi_mode">WiFi Mode</string>
    <string name="wlan">WLAN</string>
    <string name="wlan_direct">WLAN Direct</string>
    <string name="yes">Yes</string>
</resources>