<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="#dddddd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_settings"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
            <TextView
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:id="@+id/advanced_setting_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Close"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <TextView
            android:textSize="16sp"
            android:textColor="#ee2c2c"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vocational_tips"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/input_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:id="@+id/advanced_setting_input"
                android:background="@drawable/edit_background_rectangle"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/please_enter_password"/>
            <View
                android:background="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:id="@+id/advanced_setting_sure_ly"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:id="@+id/advanced_setting_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Cancel"
                    android:layout_weight="1"/>
                <View
                    android:background="@android:color/black"
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:id="@+id/advanced_setting_sure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sure"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/wifi_mode_ly"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_mode"/>
            <RadioGroup
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/wifi_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <RadioButton
                    android:textColor="@android:color/black"
                    android:id="@+id/radio_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/wlan"/>
                <RadioButton
                    android:textColor="@android:color/black"
                    android:id="@+id/radio_p2p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/wlan_direct"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
