<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <TextView
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/gps_tips"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:id="@+id/wifi_permission_not_open"
            android:background="@drawable/button_shape_box"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/not_open"
            android:layout_weight="1"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:id="@+id/wifi_permission_open"
            android:background="@drawable/button_shape_bg_normal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/go_open"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
