<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_gray_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_factory_tips"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <View
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:textSize="18sp"
            android:textColor="@color/colorTextBlue"
            android:gravity="center"
            android:id="@+id/reset_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_weight="1"/>
        <View
            android:background="@android:color/black"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/colorTextBlue"
            android:gravity="center"
            android:id="@+id/reset_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
