<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#aaaaaa"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:id="@+id/db_delete_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/sure_delete"/>
    <View
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:textSize="14sp"
            android:textColor="#110dff"
            android:gravity="center"
            android:id="@+id/db_delete_cancel"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:layout_weight="1"/>
        <View
            android:background="@android:color/black"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"/>
        <TextView
            android:textSize="14sp"
            android:textColor="#ff1a1e"
            android:gravity="center"
            android:id="@+id/db_delete_sure"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/sure"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
