<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/db_out_lay_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/db_list_lay_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:gravity="center_vertical"
            android:background="@drawable/db_top_bg"
            android:layout_width="match_parent"
            android:layout_height="25dp">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <com.sonoptek.pvus_android.list.SwipeListView
            android:id="@+id/db_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp">
        <Button
            android:textSize="14sp"
            android:id="@+id/btn_db_report"
            android:background="@drawable/db_btn_bg"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:text="@string/report"
            android:layout_weight="1"
            android:textAllCaps="false"/>
        <Button
            android:textSize="14sp"
            android:id="@+id/btn_db_export"
            android:background="@drawable/db_btn_bg"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:text="@string/export_all"
            android:layout_weight="1"
            android:textAllCaps="false"/>
        <Button
            android:textSize="14sp"
            android:id="@+id/btn_db_clear"
            android:background="@drawable/db_btn_bg"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/clear_table"
            android:layout_weight="1"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>
