<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorButtonLayBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="16sp"
        android:textColor="@color/colorTextWhite"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pw_gain"/>
    <com.sonoptek.pvus_android.PickerView
        android:layout_gravity="center_horizontal"
        android:id="@+id/pw_fragment_gain_pic"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/pw_fragment_volume"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:foreground="@drawable/button_selector_bg">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/colorTextWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/volume_button"
            android:layout_weight="1"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/colorTextBlue"
            android:id="@+id/pw_fragment_volume_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="5dp"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/pw_fragment_steer"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:foreground="@drawable/button_selector_bg">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/colorTextWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/steer_button"
            android:layout_weight="1"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/colorTextBlue"
            android:id="@+id/pw_fragment_steer_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="5dp"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/pw_fragment_angle"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:foreground="@drawable/button_selector_bg">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/colorTextWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/angle_button"
            android:layout_weight="1"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/colorTextBlue"
            android:id="@+id/pw_fragment_angle_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="5dp"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/pw_fragment_prf"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:foreground="@drawable/button_selector_bg">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/colorTextWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/prf_button"
            android:layout_weight="1"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/colorTextBlue"
            android:id="@+id/pw_fragment_prf_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="5dp"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/pw_fragment_baseline"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:foreground="@drawable/button_selector_bg">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/colorTextWhite"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/base_line_button"
            android:layout_weight="1"/>
    </LinearLayout>
    <View
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="5dp"/>
</LinearLayout>
